--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ p {
 		</div>
 
 
-	  <span class="titles"><h3>MAYNLAND</h3><h4>Te Gelsen</h4></span>
+	  <span class="titles"><h3>PROGRAMLAR</h3><h4>TRENCH</h4></span>
 	</div>
 	<span class="arm-container">
 		<span class="arm"></span>
