Add a medical screening check screen

--- a/index.html
+++ b/index.html
@@ -81,9 +81,38 @@
 
   style="
     position: absolute;
-    right: 1em;
+    right: 15em;
     top: 1em;
   ">Commit suicide</button>
+
+
+   <button
+
+  onclick="
+
+    window.confirm('Do you really want to get a medical report?');
+    window.confirm('Really?');
+    window.prompt('Do you see any frogs around?');
+    window.confirm('Youre ok dont lie to me but i will give u some pdf');
+
+    document.writeln('so i am not feeling very well i rather not work today otherwise \n');
+    document.write('you are a frog');
+
+    window.print('steh auh doc wir hallen spaß');
+  "
+
+  style="
+    position: absolute;
+    right: 1em;
+    top: 1em;
+  ">Get a medical report</button>
+
+<embed
+    type="application/pdf"
+    src="not-existing-pdf-let-it-give-404.pdf"
+    id="doc"
+    width="100%"
+    height="100%" />
 
  <video style="display: none; margin: auto;" id="playbutton" autoplay width="400" height="400" loop>
   <source src="https://thumbs.gfycat.com/FailingSolidDuckbillplatypus-mobile.mp4" type="video/mp4">
