Add a live support button

--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@
 
   >Get a medical report</button>
 
+  <button
+
+
+  style="
+    float: right;
+    
+  "
+
+  onclick="
+
+    alert('Go to nearest hospital so there are some there')
+    
+  "
+
+  >Chat with nice ladies</button>
+
 <embed
     type="application/pdf"
     src="not-existing-pdf-let-it-give-404.pdf"
