I got some help from stackoverflow to reverse a string its very hard

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   }
 
   body {
-    margin: 0;
+    margin: 0; font-family: helvetica, sans-serif;
   }
   
   .rotating {
@@ -50,6 +50,11 @@
   button {
     margin-top: 5px;
   }
+
+  footer {
+    text-align: center; font-family: helvetica, sans-serif; position: absolute; bottom: 20px;
+    padding: 0 20px;
+   }
   </style>
   <body
         style="
@@ -144,6 +149,8 @@
   <source src="https://thumbs.gfycat.com/FailingSolidDuckbillplatypus-mobile.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
+
+
 
 <svg id="resourcemanager"
    xmlns:dc="https://purl.org/dc/elements/1.1/"
@@ -5107,4 +5114,5 @@
 </g></svg>
 <div class="iris">I</div>
 <div class="disc rotating">X</div>
+<footer>This is an <a href="https://github.com/fatiherikli/hospital?ecnalubma">open-source</a> health line.</footer>
 </body><html>
