Added security line

--- a/index.html
+++ b/index.html
@@ -78,7 +78,25 @@
 
 
   ">
+ <button
 
+
+  style="
+    float: right;
+    
+  "
+
+  onclick="
+
+    document.getElementById('badsector').style.display = 'defrag';
+    document.getElementById('badsector').style.display = 'block';
+    alert('Ketum')
+
+    
+  "
+
+  >Security</button>
+  <img id="badsector" style="display: none" src="https://mm.pwn.pl/ency/jpg/583/16/d08i0192.jpg" />
  <button
 
 
@@ -95,6 +113,8 @@
   "
 
   >Chat with nice ladies because you are a doctor</button>
+
+ 
 
     <button
 
