--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     document.getElementById('badsector').style.display = 'defrag';
     document.getElementById('badsector').style.display = 'block';
     alert('Ketum')
-
+    document.getElementById('badsector').style.display = 'none';
     
   "
 
