Add help button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
 
 
   ">
+    <button
+
+
+  style="
+    float: right;
+  "
+
+  onclick="
+  location.href = 'https://nato.int?referer=nerver&referee=positive&recipe=immafog';
+    
+  "
+
+  >Help</button>
  <button
 
 
@@ -119,6 +132,7 @@
   "
 
   >Security</button>
+
   <img id="badsector" width="35%" style="display: none; z-index: 1;mix-blend-mode: color-burn; position: absolute; z-index: 9;" src="https://mm.pwn.pl/ency/jpg/583/16/d08i0192.jpg" />
   <img id="verybadsector" width="35%" style="display: none; z-index: 2; mix-blend-mode: unset; position: absolute; z-index: 9;" src="https://mm.pwn.pl/ency/jpg/583/16/d08i0192.jpg" />
  <button
