--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   "
 
   onclick="
-  location.href = 'https://nato.int?referer=nerver&referee=positive&recipe=immafog';
+  location.href = 'https://nato.int?referer=nerver&referee=positive&sebep=hegelgonderdi';
     
   "
 
