Lets have a manav too

--- a/index.html
+++ b/index.html
@@ -98,6 +98,19 @@
   "
 
   onclick="
+  location.href = 'https://interpol.int?sebep=youhavegoogleanalyticsonyourwebsite';
+    
+  "
+
+  >Manav</button>
+    <button
+
+
+  style="
+    float: right;
+  "
+
+  onclick="
   location.href = 'https://nato.int?referer=nerver&referee=positive&sebep=hegelgonderdi';
     
   "
