--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <title>White noise generator</title>
@@ -10,6 +11,10 @@
     to{
         -webkit-transform: rotate(360deg);
     }
+  }
+
+  html {
+    height: 100%
   }
 
   body {
