So javascript is not a programming language actually but just a dialect

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
    }
 
   </style>
+   
   <body
         style="
 
@@ -95,7 +96,7 @@
 
 
   ">
-
+<h3 style="padding: 7px; margin: 0; position: absolute; color: blue;">ECMA INTERNATIONAL 2021</h3>
     <button
 
 
